--- a/package.json
+++ b/package.json
@@ -2,5 +2,11 @@
   "name": "cloudretail",
   "workspaces": [
     "apps/*"
-  ]
+  ],
+  "scripts": {
+    "format": "prettier --ignore-unknown --write ."
+  },
+  "devDependencies": {
+    "prettier": "^3.4.2"
+  }
 }
