--- a/package.json
+++ b/package.json
@@ -4,9 +4,12 @@
     "apps/*"
   ],
   "scripts": {
-    "format": "prettier --ignore-unknown --write ."
+    "format": "prettier --ignore-unknown --write .",
+    "prepare": "husky"
   },
   "devDependencies": {
+    "husky": "^9.1.7",
+    "lint-staged": "^15.3.0",
     "prettier": "^3.4.2"
   }
 }
