--- a/apps/ui/package.json
+++ b/apps/ui/package.json
@@ -1,4 +1,12 @@
 {
   "name": "@cloudretail/ai",
-  "type": "module"
+  "type": "module",
+  "scripts": {
+    "lint": "eslint --fix ."
+  },
+  "devDependencies": {
+    "@eslint/js": "^9.18.0",
+    "typescript": "^5.7.3",
+    "typescript-eslint": "^8.20.0"
+  }
 }
