--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -3,10 +3,13 @@
   "type": "module",
   "scripts": {
     "build": "tsc --outDir dist",
-    "lint": "eslint --fix ."
+    "lint": "eslint --fix .",
+    "start": "tsx watch --clear-screen=false --env-file=.env src/index.ts"
   },
   "devDependencies": {
     "@eslint/js": "^9.18.0",
+    "@types/node": "^22.10.6",
+    "tsx": "^4.19.2",
     "typescript": "^5.7.3",
     "typescript-eslint": "^8.20.0"
   }
