--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -2,6 +2,8 @@
   "name": "@cloudretail/api",
   "type": "module",
   "scripts": {
+    "docker:compose:up": "docker-compose up -d",
+    "docker:compose:down": "docker-compose down",
     "build": "tsc --outDir dist",
     "lint": "eslint --fix .",
     "start": "tsx watch --clear-screen=false --env-file=.env src/index.ts"
