set up `node-pg-migrate`

--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -6,13 +6,22 @@
     "docker:compose:down": "docker-compose down",
     "build": "tsc --outDir dist",
     "lint": "eslint --fix .",
+    "migrate:up": "dotenv npx node-pg-migrate up -- --migrations-table=_migrations",
+    "migrate:down": "dotenv npx node-pg-migrate down -- --migrations-table=_migrations",
+    "migrate:create": "node-pg-migrate create --migration-file-language sql --template-file-name ../../node_modules/node-pg-migrate/templates/migration-template.sql",
     "start": "tsx watch --clear-screen=false --env-file=.env src/index.ts"
   },
   "devDependencies": {
     "@eslint/js": "^9.18.0",
     "@types/node": "^22.10.6",
+    "@types/pg": "^8.11.10",
+    "dotenv-cli": "^8.0.0",
     "tsx": "^4.19.2",
     "typescript": "^5.7.3",
     "typescript-eslint": "^8.20.0"
+  },
+  "dependencies": {
+    "node-pg-migrate": "^7.9.0",
+    "pg": "^8.13.1"
   }
 }
