--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -13,6 +13,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.18.0",
+    "@ts-safeql/eslint-plugin": "^3.6.6",
     "@types/node": "^22.10.6",
     "@types/pg": "^8.11.10",
     "dotenv-cli": "^8.0.0",
@@ -21,6 +22,7 @@
     "typescript-eslint": "^8.20.0"
   },
   "dependencies": {
+    "@ts-safeql/sql-tag": "^0.2.1",
     "node-pg-migrate": "^7.9.0",
     "pg": "^8.13.1"
   }
