--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -1,3 +1,5 @@
+ADMIN_USERNAME=admin
+ADMIN_PASSWORD=admin
 DATABASE_URL=postgres://postgres:postgres@localhost:5432/postgres
 MIGRATIONS_DIR=./migrations
 MIGRATIONS_TABLE=_migrations
