--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -14,6 +14,7 @@
   "devDependencies": {
     "@eslint/js": "^9.18.0",
     "@ts-safeql/eslint-plugin": "^3.6.6",
+    "@types/express": "^5.0.0",
     "@types/node": "^22.10.6",
     "@types/pg": "^8.11.10",
     "dotenv-cli": "^8.0.0",
@@ -23,6 +24,7 @@
   },
   "dependencies": {
     "@ts-safeql/sql-tag": "^0.2.1",
+    "express": "^5.0.1",
     "node-pg-migrate": "^7.9.0",
     "pg": "^8.13.1"
   }
