--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -26,6 +26,7 @@
     "@ts-safeql/sql-tag": "^0.2.1",
     "express": "^5.0.1",
     "node-pg-migrate": "^7.9.0",
-    "pg": "^8.13.1"
+    "pg": "^8.13.1",
+    "zod": "^3.24.1"
   }
 }
