--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@cloudretail/api",
   "type": "module",
+  "exports": "./src/exports.ts",
   "scripts": {
     "docker:compose:up": "docker-compose up -d",
     "docker:compose:down": "docker-compose down",
