--- a/apps/ui/package.json
+++ b/apps/ui/package.json
@@ -5,6 +5,7 @@
     "lint": "eslint --fix ."
   },
   "devDependencies": {
+    "@cloudretail/api": "*",
     "@eslint/js": "^9.18.0",
     "typescript": "^5.7.3",
     "typescript-eslint": "^8.20.0"
